{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 25,
  "lineage": "8b5dfb45-9955-e625-721d-bb1383a2bc34",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Mukesh_ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09694bfab577e90b0",
            "arn": "arn:aws:ec2:us-east-2:726054814142:instance/i-025153444ea153deb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-025153444ea153deb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "T2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02f898cd6581eee0e",
            "private_dns": "ip-10-0-2-94.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.94",
            "public_dns": "ec2-3-142-131-52.us-east-2.compute.amazonaws.com",
            "public_ip": "3.142.131.52",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ba75a99700758925",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00c5430cc910dbef9",
            "tags": {
              "Name": "MukeshEC2Instance"
            },
            "tags_all": {
              "Name": "MukeshEC2Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e7565ec85d94e500"
            ]
          },
          "dependencies": [
            "aws_security_group.my_security_group",
            "aws_subnet.Mukesh_public_subnet",
            "aws_vpc.Mukesh_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Mukesh_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:726054814142:internet-gateway/igw-019ae6a86be70cbbc",
            "id": "igw-019ae6a86be70cbbc",
            "owner_id": "726054814142",
            "tags": {
              "Name": "MukeshIGW"
            },
            "tags_all": {
              "Name": "MukeshIGW"
            },
            "vpc_id": "vpc-042e99abfb9d692fc"
          },
          "dependencies": [
            "aws_vpc.Mukesh_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Mukesh_public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:726054814142:route-table/rtb-09c7efda62903acc0",
            "id": "rtb-09c7efda62903acc0",
            "owner_id": "726054814142",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-019ae6a86be70cbbc",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "MukeshPublicRouteTable"
            },
            "tags_all": {
              "Name": "MukeshPublicRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-042e99abfb9d692fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Mukesh_igw",
            "aws_vpc.Mukesh_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Mukesh_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ff4d7020cb7c90ab",
            "route_table_id": "rtb-09c7efda62903acc0",
            "subnet_id": "subnet-00c5430cc910dbef9"
          },
          "dependencies": [
            "aws_internet_gateway.Mukesh_igw",
            "aws_route_table.Mukesh_public_route",
            "aws_subnet.Mukesh_public_subnet",
            "aws_vpc.Mukesh_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:726054814142:security-group/sg-0e7565ec85d94e500",
            "description": "Allow SSH traffic from my public IP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e7565ec85d94e500",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "MukeshSecurityGroup",
            "name_prefix": "",
            "owner_id": "726054814142",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-042e99abfb9d692fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Mukesh_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Mukesh_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:726054814142:subnet/subnet-00c5430cc910dbef9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00c5430cc910dbef9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "726054814142",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "MukeshPublicSubnet"
            },
            "tags_all": {
              "Name": "MukeshPublicSubnet"
            },
            "vpc_id": "vpc-042e99abfb9d692fc"
          },
          "dependencies": [
            "aws_vpc.Mukesh_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Mukesh_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:726054814142:vpc/vpc-042e99abfb9d692fc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d2090efd590c474c",
            "default_route_table_id": "rtb-0ca10b270a04ab99a",
            "default_security_group_id": "sg-01262a75bce649762",
            "dhcp_options_id": "dopt-0da7c04a151b358cb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-042e99abfb9d692fc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ca10b270a04ab99a",
            "owner_id": "726054814142",
            "tags": {
              "Name": "MukeshVPC"
            },
            "tags_all": {
              "Name": "MukeshVPC"
            }
          }
        }
      ]
    }
  ]
}